Fixed scrollbar resizing, styled sidebar

--- a/sites/all/themes/datamodules/css/blocks.css
+++ b/sites/all/themes/datamodules/css/blocks.css
@@ -153,8 +153,7 @@ h2.block-title { /* Block title */
 #block-block-3 ul li a{
 	color:#333;
 	text-transform:uppercase;
-	font-size:1.2em;
-	margin:15px 5px;
+	font-size:1.3em;
 	text-decoration:none;
 }
 
@@ -165,17 +164,29 @@ h2.block-title { /* Block title */
 }
 
 #block-block-3 ul{
-	padding:25px 20px;
+	padding:10px 15px 0px 15px;
 }
 
 #block-block-3 ul li{
 	list-style-image:none;
 	list-style-type:none;
-	margin:12px 0;
+	font-weight: bold;
 }
 
 #block-block-3 ul li a:hover{
 	color:#e4543a;
+}
+
+#block-block-3 ul li ul li {
+	padding: 6px;
+}
+
+#block-block-3 ul li ul li a {
+	font-weight: normal;
+	text-transform: none;
+	font-style: italic;
+	font-size: 1.0em;
+	line-height: 70%;
 }
 
 
